# promethium-examples

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  sonar-project.properties  utils.py
.github/workflows/: ci.yaml
docs/: conf.py  index.rst  promethium.cli.rst  promethium.models.rst  promethium.rst
examples/: README.md  basic-client-example.py  from-classes.py  utils.py
examples/Getting_Started/01_Single_Point_Calculation/: README.md
examples/Getting_Started/02_Geometry_Optimization/: README.md
examples/Getting_Started/03_Conformer_Search/: README.md
examples/basis_demo/: README.md  get.py  paxlovid-go.json  run.py  utils.py
examples/basis_demo/httpx/: run.py
examples/basis_demo/sdk/: run.py
examples/batch_conformer_search/sdk/: run.py
examples/custom_conformer_search/sdk/: run.py
examples/excited_states/sdk/: run.py  run_ionized_with_relax.py
examples/fsapt/7kw4/: run.py
examples/hessian_timings/: README.md  run.py
examples/hessian_timings/httpx/: run.py
examples/qcscore/: qcscore-properties.json
examples/reaction_paths/: README.md  run.py
examples/scf_properties/: README.md
examples/sequential_GO_to_SPC/: README.md  paxlovid-go.json
examples/ts_endpoints_demo/: README.md  run.py
examples/ts_opt_demo/: README.md  run.py
promethium/: client.py  exceptions.py  filesys_utils.py  promethium-openapi.yaml  utils.py
promethium/cli/: __init__.py  config.py  constants.py  files.py  utils.py  workflows.py
promethium/models/: __init__.py  models.py  sdk.py
tests/: test_client.py  test_utils.py
(+64 files in other folders)
